# TestBrainAgriculture

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 3d0a142a49a2_init.py
app/: dashboard.py  main.py
app/models/: __init__.py  cultura.py  database.py  produtor.py  propriedade.py  propriedade_safra_cultura.py  safra.py
app/routes/: cultura.py  dashboard.py  produtor.py  propriedade.py  propriedade_safra_cultura.py  safra.py
app/schemas/: cultura.py  dashboard.py  produtor.py  propriedade.py  propriedade_safra_cultura.py  safra.py
app/services/: validators.py
app/tests/: conftest.py  test_dashboard.py  test_produtores.py
app/utils/: logger.py  seed_custom.py  seed_data.py
docs/: OPENAPI_SPEC.md
