[project]
name = "testbrainagriculture"
version = "0.1.5"
description = "Sistema de gerenciamento de produtores rurais"
authors = [
    {name = "William Reis", email = "wjsreis.dev@gmail.com"}
]
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg2-binary",
    "alembic",
    "pydantic",
    "pytest",
    "pytest-asyncio",
    "python-dotenv",
    "loguru",
    "streamlit",
    "requests",
    "plotly",
    "httpx",
    "faker",
]

[project.optional-dependencies]
dev = [
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]